fixed portfolio titles overlapping portfolio images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,12 +98,7 @@ h3{
 	position:relative;
 	display:inline-block;
 }
-/*@media only screen and (max-width:990px){
-	.examples{
-		width:30%;
-	}
-}
-*/
+
 @media only screen and (max-width:640px){
 	.navbar-fixed-bottom{
 		position:static; 
